# degeneracy_distillery

./: .gitignore  COLAB_INSTALL.txt  COLAB_SETUP.md  COMPREHENSIVE_UPDATE_SUMMARY.md  FISHER_NAMING.md  FLEXIBLEDICT_CHEATSHEET.md  FLEXIBLEDICT_INTEGRATION.md  FS_NAMING_UPDATE.md  IMPORT_FIXES.md  INSTALL.md  LICENSE  MANIFEST.in  NOTEBOOK_IMPORTS.md  PYOPERON_COMPATIBILITY.md  README.md  degen_env.yml  degen_env_minimal.yml  pyproject.toml  setup.sh
degeneracy_distillery/: __init__.py  fishnets.py  flatten_test.py  flatten_test_multiple.py  flattening_routine.py  io_utils.py  nn_inv.py  plot_utils.py  postprocessing_utils.py  preprocessing_utils.py  run_through.py  sr_functions.py  sr_utils.py  training_loop_fishnets.py  training_loop_flatten.py  training_loop_flatten_inv.py  training_loop_flattening.py  training_loop_flattening2.py
notebooks/: postprocess_test_ex0.ipynb  postprocess_test_ex1.ipynb  test_ex1.ipynb  test_ex2.ipynb  test_ex3.ipynb  test_ex3_sbi.ipynb
src/: fishnets.py  flatten_net.py  flatten_test.py  flatten_test_ensemble.py  flatten_test_multiple.py  flattening_routine.py  postprocessing_utils.py  preprocessing_utils.py  run_test.py  run_through.py  sat_connected.py  saturation_test.py  simple_test.py  sr_functions.py  sr_utils.py  test_config.yaml  training_loop_fishnets.py  training_loop_flatten.py  training_loop_flatten_inv.py  training_loop_flattening.py  training_loop_flattening2.py  training_loop_flattening_nonlinear.py
