[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "degeneracy-distillery"
version = "0.1.0"
description = "A package for degeneracy analysis and neural network flattening"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "T. Lucas Makinen", email = "lucas.makinen@gmail.com"}
]
keywords = ["machine-learning", "symbolic-regression", "neural-networks", "degeneracy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.16.0",
    "matplotlib>=3.9.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.5.0",
    "jax>=0.4.38",
    "jaxlib>=0.4.38",
    "flax>=0.10.0",
    "optax>=0.2.4",
    "orbax-checkpoint>=0.11.0",
    "pyoperon>=0.4.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "corner>=2.2.0",
    "cvxpy>=1.7.0",
    "statsmodels>=0.14.0",
    "astropy>=6.1.0",
    "sympy>=1.12.0",
    "requests>=2.32.0",
    "pydantic>=2.8.0",
    "rich>=14.0.0",
    "numdifftools>=0.9.41",
    "pylops>=2.6.0",
    "pyproximal>=0.11.0",
    "rmsd>=1.6.0",
    "chex>=0.1.89",
    "etils>=1.12.0",
    "treescope>=0.1.9",
    "treelib>=1.7.0",
    "networkx>=3.3",
    "joblib>=1.4.0",
    "psutil>=6.0.0",
    "pympler>=1.1",
    "beautifulsoup4>=4.12.0",
    "simplejson>=3.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
jupyter = [
    "ipython>=7.34.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.2.0",
    "ipykernel>=6.17.0",
    "ipywidgets>=7.7.0",
    "notebook>=6.5.0",
]


[project.urls]
Homepage = "https://github.com/tlmakinen/degeneracy_distillery"
Repository = "https://github.com/tlmakinen/degeneracy_distillery"
Issues = "https://github.com/tlmakinen/degeneracy_distillery/issues"

[tool.setuptools]
packages = ["degeneracy_distillery"]

[tool.setuptools.package-data]
degeneracy_distillery = ["*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=degeneracy_distillery --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
