[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "degeneracy-distillery"
version = "0.1.0"
description = "A package for degeneracy analysis and neural network flattening"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "T. Lucas Makinen", email = "lucas.makinen@gmail.com"}
]
keywords = ["machine-learning", "symbolic-regression", "neural-networks", "degeneracy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core scientific computing (stable APIs)
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "sympy>=1.8",

    # JAX ecosystem (CPU by default; use [metal] on Apple Silicon for GPU)
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.8.0",
    "optax>=0.2.0",
    "orbax-checkpoint>=0.5.0",
    "chex>=0.1.80",

    # Symbolic regression (core functionality)
    "pyoperon>=0.4.0",

    # Utilities (very stable)
    "tqdm",
    "pyyaml",
    "requests",

    # Analysis tools
    "corner>=2.0.0",
    "cvxpy>=1.0.0",
    "statsmodels>=0.12.0",
    "astropy>=5.0.0",
    "numdifftools>=0.9.0",
    "rmsd>=1.4.0",

    # Additional utilities
    "pydantic>=2.0.0",
    "rich>=12.0.0",
    "pylops>=2.0.0",
    "pyproximal>=0.7.0",
    "etils>=1.0.0",
    "treescope>=0.1.0",
    "treelib>=1.6.0",
    "networkx>=2.5",
    "joblib>=1.0.0",
    "pympler>=1.0",
    "beautifulsoup4>=4.9.0",
    "simplejson>=3.17.0",
]

[project.optional-dependencies]
# Apple Silicon: use "pip install -e .[metal]" for Metal GPU (jax-metal requires jax/jaxlib 0.4.34)
metal = [
    "jax==0.4.34",
    "jaxlib==0.4.34",
    "jax-metal==0.1.1",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
jupyter = [
    "ipython>=7.34.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.2.0",
    "ipykernel>=6.17.0",
    "ipywidgets>=7.7.0",
    "notebook>=6.5.0",
]

[project.urls]
Homepage = "https://github.com/tlmakinen/degeneracy_distillery"
Repository = "https://github.com/tlmakinen/degeneracy_distillery"
Issues = "https://github.com/tlmakinen/degeneracy_distillery/issues"

[tool.setuptools]
packages = ["degeneracy_distillery"]

[tool.setuptools.package-data]
degeneracy_distillery = ["*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=degeneracy_distillery --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true